<resources>
    <string name="app_name">SS助手</string>
    <string name="test_speed">测速</string>
    <string name="status">状态:</string>
    <string name="server_address">测试服务器</string>
    <string name="server_address_test">www.baidu.com</string>
    <string name="redirect_address">重定向地址</string>
    <string name="is_url_wrong">url是否错误</string>
    <string name="is_timed_out">请求超时</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="exception_msg">异常信息</string>
    <string name="time_used">请求用时</string>
    <string name="response_status_code">返回状态码</string>
    <string name="response_byte_size">响应字节数</string>
    <string name="request_result">请求结果</string>
    <string name="execption_occured">请求异常发生</string>
    <string name="result_ok">请求正常</string>
    <string name="empty">空</string>
    <string name="dowload_speed">下载速度</string>
    <string name="kb_by_second">KB/s</string>
    <string name="unit_millisecond">ms</string>
    <string name="unit_second">S</string>
    <string name="unit_byte">Byte</string>
    <string name="speed_test_result">总测试结果</string>
    <string name="total_server_count">请求的总服务器个数</string>
    <string name="too_mangy_time_redirect">过多次数的重定向</string>
    <string name="total_used_time">测试总用时间</string>
    <string name="white_list_success_rate">白名单成功率</string>
    <string name="white_list_addr_count">白名单地址个数</string>
    <string name="black_list_success_rate">黑名单成功率</string>
    <string name="black_list_addr_count">黑名单地址个数</string>
    <string name="connection_success_rate">连接成功率</string>
    <string name="cur_server_count">现在请求的个数</string>
    <string name="connection_progress">连接进度</string>
    <string name="cur_speed">当前速度</string>
    <string name="white_avg_speed">白名单平均速度</string>
    <string name="black_avg_speed">黑名单平均速度</string>
    <string name="server_setting">配置设置</string>
    <string name="ss_server_address">服务器地址</string>
    <string name="ss_remote_port">远程端口</string>
    <string name="ss_local_port">本机端口</string>
    <string name="ss_password">密码</string>
    <string name="ss_encrypt_method">加密方式</string>
    <string name="ensure">确认</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="input_ss_server_setting_invaild">输入设置有空值或者端口不合法</string>
    <string name="please_add">还没有设置过的服务器,请按右下角添加</string>
    <string name="empty_background_result">还没有测试结果，请稍后再来吧</string>
    <string name="top_100_white_addr_success_ratio">中国前25网址成功率</string>
    <string name="top_100_white_addr_speed_avg">中国前25网址平均速度</string>
    <string name="top_100_black_addr_success_ratio">美国前100网址成功率</string>
    <string name="top_100_black_addr_speed_avg">美国前100网址平均速度</string>
    <string name="grade">评分:</string>
    <string name="score">跑分</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="server_config">服务器设置</string>
    <string name="app_config">app设置</string>
    <string name="back_test_finish_toast_msg">自动测速完成</string>
    <string name="back">返回</string>
    <string name="system_proxy">系统代理</string>
    <string name="status_good">优良</string>
    <string name="status_normal">正常</string>
    <string name="status_bad">较差</string>
    <string name="wifi_test">WiFi测速</string>
    <string name="wifi_test_explain">仅仅在Wifi情况下进行自动测速,移动流量等情况下不进行</string>
    <string name="auto_test">自动测速</string>
    <string name="auto_test_explain">如果程序在后台运行,则每隔一段时间对所有的服务器进行评分测速</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="interval_setting">测速间隔</string>
    <string name="interval_setting_explain">设置后台测速间隔时间</string>
    <string name="two_min">2分钟</string>
    <string name="fifty_min">15分钟</string>
    <string name="thirty_min">30分钟</string>
    <string name="sixty_min">60分钟</string>
    <string name="three_hour">3小时</string>
    <string name="six_hour">6小时</string>
    <string name="one_day">1天</string>
    <string name="img_description_nagvation">导航图标</string>
    <string name="img_description_back">返回</string>
    <string name="img_description_server_config">测试服务器列表配置</string>
    <string name="img_description_password_edit_type">密码编辑模式</string>
    <string name="img_description_get_grade">开始测速</string>

</resources>
