<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/textViewSmall.Green"
        android:layout_margin="8dp"
        android:text="@string/server_setting" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/ss_server_address"
            style="@style/textViewMiddle"
            android:text="@string/ss_server_address" />

        <EditText
            android:id="@+id/ss_server_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ss_server_address"
            android:text="hk-01.flashss.win" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/ss_remote_port"
            style="@style/textViewMiddle"
            android:text="@string/ss_remote_port" />

        <EditText
            android:id="@+id/ss_remote_port_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ss_remote_port"
            android:text="49414" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/ss_server_local_port"
            style="@style/textViewMiddle"
            android:text="@string/ss_local_port" />

        <EditText
            android:id="@+id/ss_local_port_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ss_server_local_port"
            android:text="1080" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/ss_server_password"
            style="@style/textViewMiddle"
            android:text="@string/ss_password" />

        <EditText
            android:id="@+id/ss_server_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ss_server_password"
            android:text="Ln120190201" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/ss_server_encrypt_method"
            style="@style/textViewMiddle"
            android:text="@string/ss_encrypt_method" />

        <EditText
            android:id="@+id/ss_server_encrypt_method_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ss_server_encrypt_method"
            android:text="aes-256-cfb" />
    </RelativeLayout>

    <Button
        android:id="@+id/store_setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:text="@string/store_setting"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:text="停止"
        android:textColor="@color/colorWhite" />
</LinearLayout>