<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textview_title_of_result"
                style="@style/textViewMiddle.Gray"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/speed_test_result" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/textview_title_of_result"
                android:src="@mipmap/result" />

            <ImageView
                android:id="@+id/img_view_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:src="@mipmap/close" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/total" />

                <TextView
                    android:id="@+id/textview_total_server_count"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/total_server_count" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/total" />

                <TextView
                    android:id="@+id/textview_cur_server_count"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/cur_server_count" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/pass" />

                <TextView
                    android:id="@+id/textview_white_server_count"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/white_list_addr_count" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/ratio" />

                <TextView
                    android:id="@+id/textview_white_server_ratio"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/white_list_success_rate" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/average" />

                <TextView
                    android:id="@+id/textview_white_server_speed_avg"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/white_avg_speed" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/forbidden" />

                <TextView
                    android:id="@+id/textview_black_server_count"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/black_list_addr_count" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/ratio" />

                <TextView
                    android:id="@+id/textview_black_server_ratio"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/black_list_success_rate" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/average" />

                <TextView
                    android:id="@+id/textview_black_add_speed_avg"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/black_avg_speed" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@mipmap/timer1" />

                <TextView
                    android:id="@+id/textview_total_time_used"
                    style="@style/textViewMiddle.Gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/total_used_time" />
            </LinearLayout>

            <View
                style="@style/HLine.Gray"
                android:layout_marginTop="4dp" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>