<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_nagvation"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/timg" />

    <RelativeLayout
        android:id="@+id/layout_server_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:layout_below="@id/img_nagvation"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_server_config"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ss_config" />

        <TextView
            style="@style/textViewLarge"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/img_server_config"
            android:text="@string/server_config" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_app_config"
        android:layout_width="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_server_config"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_app_config"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:src="@drawable/config" />

        <TextView
            style="@style/textViewLarge"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/img_app_config"
            android:text="@string/app_config" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_help"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/question" />

                <TextView
                    style="@style/textViewLarge"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@id/img_help"
                    android:text="@string/help" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_about"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/about" />

                <TextView
                    style="@style/textViewLarge"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@id/img_about"
                    android:text="@string/about" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>